[package]
name = "regex-procs"
version = "0.1.0"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
#no_use_parsers = []
no_log = []

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.40"
lazy_static = "1.4.0"
proc-macro2 = "1.0.26"
quote = "1.0.9"
regex = "1.5.3"
syn = { version = "1.0.72", features = ["full", "extra-traits"] }
