[package]
name = "regex-procs"
version = "0.1.1"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
edition = "2018"


[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.43"
lazy_static = "1.4.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
regex = "1.5.4"
syn = { version = "1.0.76", features = ["full", "extra-traits"] }
